--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "etermed/switcher",
     "description": "Number to text translator.",
+    "license": "MIT",
+    "keywords": ["laravel", "conversion", "number"],
     "type": "library",
     "authors": [
         {
@@ -9,5 +11,16 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+    	"php": ">=5.5.9",
+        "illuminate/support": "5.1.x|5.2.x|5.3.x|5.4.x"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "6.3.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "Etermed\\Switcher\\": "src"
+        }
+    }
 }
