--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,16 @@
         "illuminate/support": "5.1.x|5.2.x|5.3.x|5.4.x"
     },
     "require-dev": {
-        "phpunit/phpunit": "6.3.*"
+        "phpunit/phpunit": "~5.7"
     },
     "autoload": {
         "psr-4": {
             "Etermed\\Switcher\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Etermed\\Switcher\\Test\\": "tests/"
         }
     }
 }
